[cg] REGRESSION (r101517): Animating the transform of a <rect> with shape-rendering: crispEdges leaves behind garbage https://bugs.webkit.org/show_bug.cgi?id=82963 <rdar://problem/11170476>

Reviewed by Simon Fraser.

CoreGraphics can inflate the stroke by 1px when drawing a rectangle
with antialiasing disabled at non-integer coordinates, we need to
compensate by inflating the RenderSVGRect repaint bounds by 1px.

No new tests, as this is not reproducible in DRT or WKTR.

* rendering/svg/RenderSVGRect.cpp:
(WebCore::RenderSVGRect::createShape):
(WebCore::RenderSVGRect::strokeBoundingBox):
* rendering/svg/RenderSVGRect.h:
(RenderSVGRect):

New Mac baselines for two tests which have SVG <rect>s with shape-rendering: crispEdges.

* platform/mac/svg/W3C-SVG-1.1/filters-composite-02-b-expected.txt:
* platform/mac/svg/custom/shape-rendering-expected.txt:


Canonical link: https://commits.webkit.org/100821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113496 268f45cc-cd09-0410-ab3c-d52691b4dbfc